# P2P-File-Sharing

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  peerNtest.py  peerStaticTest.py  test_config.json  test_config_simple.json
Client/: CMakeLists.txt  Client.cpp
Console/: CMakeLists.txt  Console.cpp  Console.h  Parsers.cpp  Parsers.h
Exchanger/: CMakeLists.txt  Exchanger.cpp  Exchanger.h
Indexing/: CMakeLists.txt  index.cpp  index.h  indexRPC.cpp  indexRPC.h
LocalTesting/: CMakeLists.txt  LocalTesting.cpp
Peer/: CMakeLists.txt  Peer.cpp  Peer.h
Server/: CMakeLists.txt  Server.cpp  Server.h
SuperPeer/: CMakeLists.txt  SuperPeer.cpp
TestPeer/: CMakeLists.txt  TestPeer.cpp  TestStrings.h
Util/: CMakeLists.txt  Config.cpp  Config.h  Folder.cpp  Folder.h  Log.cpp  Log.h
docs/: Average Runtime n1.csv  Average Runtimes (3-81).xlsx  Average Runtimes Gnutella.xlsx  Average Runtimes PA3.xlsx  Average Runtimes.xlsx  CC.xlsx  Design.md  Manual.md  Output.md  ProgramListing.md  Test.md  TestConfig.vsdx  TestConfigSimple.vsdx
